--- a/.github/workflows/pytorch_label_check.yml
+++ b/.github/workflows/pytorch_label_check.yml
@@ -12,6 +12,14 @@ on:
           - linux-arm64-npu-4
         default: "linux-arm64-npu-1"
         description: "The runner selected to run on"
+      image:
+        required: true
+        type: choice
+        options:
+          - "swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:8.2.rc1-910b-ubuntu22.04-py3.11"
+          - "swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:latest"
+        default: "swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:latest"
+        description: "The container image to use"
 
   pull_request:
     branches:
@@ -41,24 +49,23 @@ jobs:
         id: set
         run: |
           runner=${{ inputs.runner  || 'linux-arm64-npu-1' }}
+          image=${{ inputs.image || 'swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:latest' }}
           echo "runner=${runner}" >> $GITHUB_OUTPUT
-          echo 'images=["ascendai/cann:8.2.rc1-910b-ubuntu22.04-py3.11"]'
+          echo "images="${image}" >> $GITHUB_OUTPUT
 
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Get open PRs from B repo
+      - name: Get open PRs from repo
         id: get_prs
         run: |
-            prs=$(curl -s -H "Authorization: token $TOKEN" \
-              "https://api.github.com/search/issues?q=is:pr+is:open+repo:pytorch/pytorch+label:\"module:%20PrivateUse1\"")
+            url=$("https://api.github.com/search/issues?q=is:pr+is:open+repo:pytorch/pytorch+label:\"module:%20PrivateUse1\"")
+            prs=$(curl -s -H "Authorization: token ${{ secrets.COSDT_BOT_TOKEN }}" $url)
             echo "$prs" > matched.json
             cat matched.json
 
             count=$(jq 'length' matched.json)
             echo "found=$count" >> $GITHUB_OUTPUT
-        env:
-          TOKEN: ${{ secrets.COSDT_BOT_TOKEN }}
 
       - name: Show matched PRs
         if: steps.get_prs.outputs.found != '0'
@@ -81,6 +88,7 @@ jobs:
   # Define a separate job for each PR number
   check_pr:
     needs: prepare
+    environment: Ascend
     runs-on:  ${{ needs.prepare.outputs.runner }}
     container:
       image: ${{ needs.prepare.outputs.images }}
@@ -105,33 +113,27 @@ jobs:
 
             echo "Checking out PR #$pr_number from $head_repo ($head_ref)"
 
-            # Clone the PR's branch
             git clone --depth=1 --branch "$head_ref" \
             "https://github.com/$head_repo.git" pr-code-$pr_number
             ls -al pr-code-$pr_number
 
-      - name: Test PR code
-        id: build
+      - name: Install dependencies
         working-directory: pr-code-${{ matrix.pr_number }}
         run: |
-            # Install dependencies
             python -mpip install -r requirements.txt
-
-            # enable debug asserts in serialization
             export TORCH_SERIALIZATION_DEBUG=1
-
             python -mpip install --no-input -r requirements.txt
-
             pip install torch_npu==2.6.0 torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
-            echo "Ninja version: $(ninja --version)"
-            echo "Python version: $(which python) ($(python --version))"
-
+      - name: Run tests
+        id: test
+        working-directory: pr-code-${{ matrix.pr_number }}
+        run: |
             python test/run_test.py --verbose --exclude-jit-executor
         continue-on-error: true
-      
+
       - name: Create GitHub Issue on Failure
-        if: steps.build.outcome == 'failure'
+        if: steps.test.outcome == 'failure'
         uses: JasonEtco/create-an-issue@v2
         with:
           token: ${{ secrets.COSDT_BOT_TOKEN }}
