--- a/.github/workflows/ort-pypi.yaml
+++ b/.github/workflows/ort-pypi.yaml
@@ -1,9 +1,9 @@
 name: Build and publish to PyPI
 
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 11 * * 0'
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     - cron: '0 11 * * 0'
 
 jobs:
   check:
