--- a/.github/workflows/llamacpp_test.yml
+++ b/.github/workflows/llamacpp_test.yml
@@ -187,7 +187,7 @@ jobs:
         working-directory: llama.cpp
         run: |
           python ../script/classify_backend_ops.py \
-            --log-dir "${{ steps.backend-ops.outputs.log-dir }}" \
+            --log-dir ../docs/llamacpp_ops.md \
             --summary-file "${GITHUB_STEP_SUMMARY}"
     
       - name: Download model and dateset
@@ -227,18 +227,18 @@ jobs:
             --outtype f16 \
             --mmproj
 
-      - name: Accuracy check
-        working-directory: llama.cpp
-        run: |
-          ./build/bin/llama-perplexity  \
-            --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
-            -f data/wikitext-2-raw/wiki.test.raw \
-            -t 8 \
-            -c 4096 \
-            -ngl 32 \
-            --batch-size 512 \
-            --ppl-stride 64 \
-            --ppl-output-type 1
+      # - name: Accuracy check
+      #   working-directory: llama.cpp
+      #   run: |
+      #     ./build/bin/llama-perplexity  \
+      #       --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
+      #       -f data/wikitext-2-raw/wiki.test.raw \
+      #       -t 8 \
+      #       -c 4096 \
+      #       -ngl 32 \
+      #       --batch-size 512 \
+      #       --ppl-stride 64 \
+      #       --ppl-output-type 1
 
       - name: Run llama-bench
         working-directory: llama.cpp
