--- a/.github/workflows/llamacpp_test.yml
+++ b/.github/workflows/llamacpp_test.yml
@@ -179,17 +179,26 @@ jobs:
           else
             echo "All operators passed."
           fi
-          # echo "log-dir=${PWD}/${LOG_DIR}" >> "${GITHUB_OUTPUT}"
+          echo "log-dir=${PWD}/${LOG_DIR}" >> "${GITHUB_OUTPUT}"
         shell:
           bash
 
       - name: Summarize backend operator support
         working-directory: llama.cpp
         run: |
-          
           python ../script/classify_backend_ops.py \
             --log-dir "${{ steps.backend-ops.outputs.log-dir }}" \
-            --summary-file ../docs/llamacpp_ops.md
+            --summary-file llamacpp_ops.md
+
+      - name: Upload the llama.cpp backend op test logs
+        id: upload-report
+        uses: actions/upload-artifact@v4
+        with:
+          name: llamacpp_ops.md
+          path: docs/llamacpp_ops.md
+          if-no-files-found: error
+          retention-days: 1
+          overwrite: true
     
       - name: Download model and dateset
         working-directory: llama.cpp
