--- a/.github/workflows/llamacpp_test.yml
+++ b/.github/workflows/llamacpp_test.yml
@@ -49,10 +49,11 @@ jobs:
           echo "runner=${runner}" >>"${GITHUB_OUTPUT}"
 
           if [[ "${runner}" == linux-aarch64-310p-* ]]; then
-            image='["swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:8.3.rc2-310p-ubuntu22.04-py3.11"]'
+            image='["8.3.rc2-310p-ubuntu22.04-py3.11"]'
             device='["ascend310p"]'
           else
-            image='["swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:8.3.rc2-910-ubuntu22.04-py3.11"]'
+            image='["8.1.rc1-910b-openeuler22.03-py3.11"]'
+            # image='["8.3.rc2-910-ubuntu22.04-py3.11"]'
             device='["ascend910b"]'
           fi
 
@@ -69,7 +70,7 @@ jobs:
       upload-report: ${{ steps.upload-report.outputs.artifact-url }}
     strategy:
       matrix:
-        image : ${{ fromJSON(needs.prepare.outputs.images) }}
+        image : swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:${{ fromJSON(needs.prepare.outputs.images) }}
         device: ${{ fromJSON(needs.prepare.outputs.device) }}
         build: ['Release']
     runs-on: ${{ needs.prepare.outputs.runner }}
@@ -310,7 +311,6 @@ jobs:
           ./build/bin/llama-mtmd-cli \
             --model models/Qwen2.5-VL-3B-Instruct/ggml-model-f16.gguf \
             --mmproj models/Qwen2.5-VL-3B-Instruct/mmproj.gguf \
-            --image ../src/images/dog.png \
             --image media/llama0-banner.png \
             -p "Describe the image in detail." \
             -t 4 \
