--- a/.github/workflows/llamacpp_test.yml
+++ b/.github/workflows/llamacpp_test.yml
@@ -196,6 +196,7 @@ jobs:
       - name: check if ops changed
         id: check-changed
         run: |
+          cat docs/llamacpp_ops.md
           git diff --exit-code -- docs/llamacpp_ops.md || echo "changed=true" >> $GITHUB_OUTPUT
         shell: bash
 
@@ -209,113 +210,113 @@ jobs:
           retention-days: 1
           overwrite: true
     
-      - name: Download model and dateset
-        working-directory: llama.cpp
-        run: |
-          mkdir -p models/Qwen2.5-0.5B-Instruct
-          huggingface-cli download \
-            --resume-download Qwen/Qwen2.5-0.5B-Instruct \
-            --local-dir models/Qwen2.5-0.5B-Instruct
+      # - name: Download model and dateset
+      #   working-directory: llama.cpp
+      #   run: |
+      #     mkdir -p models/Qwen2.5-0.5B-Instruct
+      #     huggingface-cli download \
+      #       --resume-download Qwen/Qwen2.5-0.5B-Instruct \
+      #       --local-dir models/Qwen2.5-0.5B-Instruct
           
-          mkdir -p models/Qwen2.5-VL-3B-Instruct
-          huggingface-cli download \
-            --resume-download Qwen/Qwen2.5-VL-3B-Instruct \
-            --local-dir models/Qwen2.5-VL-3B-Instruct
+      #     mkdir -p models/Qwen2.5-VL-3B-Instruct
+      #     huggingface-cli download \
+      #       --resume-download Qwen/Qwen2.5-VL-3B-Instruct \
+      #       --local-dir models/Qwen2.5-VL-3B-Instruct
           
-          mkdir -p data
-          huggingface-cli download --repo-type dataset\
-            --resume-download ggml-org/ci \
-            --local-dir data
+      #     mkdir -p data
+      #     huggingface-cli download --repo-type dataset\
+      #       --resume-download ggml-org/ci \
+      #       --local-dir data
           
-          unzip -o data/wikitext-2-raw-v1.zip -d data/
-          rm -f data/wikitext-2-raw-v1.zip
+      #     unzip -o data/wikitext-2-raw-v1.zip -d data/
+      #     rm -f data/wikitext-2-raw-v1.zip
 
-      - name: convert Qwen2.5 model
-        working-directory: llama.cpp
-        run: |
-          python3 convert_hf_to_gguf.py models/Qwen2.5-0.5B-Instruct \
-            --outfile models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
-            --outtype f16
+      # - name: convert Qwen2.5 model
+      #   working-directory: llama.cpp
+      #   run: |
+      #     python3 convert_hf_to_gguf.py models/Qwen2.5-0.5B-Instruct \
+      #       --outfile models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
+      #       --outtype f16
 
-          python3 convert_hf_to_gguf.py models/Qwen2.5-VL-3B-Instruct \
-            --outfile models/Qwen2.5-VL-3B-Instruct/ggml-model-f16.gguf \
-            --outtype f16
+      #     python3 convert_hf_to_gguf.py models/Qwen2.5-VL-3B-Instruct \
+      #       --outfile models/Qwen2.5-VL-3B-Instruct/ggml-model-f16.gguf \
+      #       --outtype f16
 
-          python3 convert_hf_to_gguf.py models/Qwen2.5-VL-3B-Instruct \
-            --outfile models/Qwen2.5-VL-3B-Instruct/mmproj.gguf \
-            --outtype f16 \
-            --mmproj
+      #     python3 convert_hf_to_gguf.py models/Qwen2.5-VL-3B-Instruct \
+      #       --outfile models/Qwen2.5-VL-3B-Instruct/mmproj.gguf \
+      #       --outtype f16 \
+      #       --mmproj
 
-      - name: Accuracy check
-        working-directory: llama.cpp
-        run: |
-          ./build/bin/llama-perplexity  \
-            --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
-            -f data/wikitext-2-raw/wiki.test.raw \
-            -t 8 \
-            -c 4096 \
-            -ngl 32 \
-            --batch-size 512 \
-            --ppl-stride 64 \
-            --ppl-output-type 1
+      # - name: Accuracy check
+      #   working-directory: llama.cpp
+      #   run: |
+      #     ./build/bin/llama-perplexity  \
+      #       --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
+      #       -f data/wikitext-2-raw/wiki.test.raw \
+      #       -t 8 \
+      #       -c 4096 \
+      #       -ngl 32 \
+      #       --batch-size 512 \
+      #       --ppl-stride 64 \
+      #       --ppl-output-type 1
 
-      - name: Run llama-bench
-        working-directory: llama.cpp
-        run: |
-          ./build/bin/llama-bench \
-            --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
-            --n-prompt 256 \
-            --n-gen 64 \
-            --batch-size 512 \
-            --ubatch-size 128 \
-            --threads 16 \
-            --repetitions 3 \
-            --output json \
-            --progress
+      # - name: Run llama-bench
+      #   working-directory: llama.cpp
+      #   run: |
+      #     ./build/bin/llama-bench \
+      #       --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
+      #       --n-prompt 256 \
+      #       --n-gen 64 \
+      #       --batch-size 512 \
+      #       --ubatch-size 128 \
+      #       --threads 16 \
+      #       --repetitions 3 \
+      #       --output json \
+      #       --progress
 
-      - name: Run llama-batched-bench
-        working-directory: llama.cpp
-        run: |
-          ./build/bin/llama-batched-bench \
-            --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
-              -c 8192 \
-              -b 512 \
-              -ub 256 \
-              -t 16 \
-              -npp 128,256 \
-              -ntg 128,256 \
-              -npl 1,2,4,8,16 \
-              --output-format jsonl
+      # - name: Run llama-batched-bench
+      #   working-directory: llama.cpp
+      #   run: |
+      #     ./build/bin/llama-batched-bench \
+      #       --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
+      #         -c 8192 \
+      #         -b 512 \
+      #         -ub 256 \
+      #         -t 16 \
+      #         -npp 128,256 \
+      #         -ntg 128,256 \
+      #         -npl 1,2,4,8,16 \
+      #         --output-format jsonl
 
-      - name: Run llama-parallel
-        working-directory: llama.cpp
-        run: |
-          ./build/bin/llama-parallel \
-            --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
-              -p "The quick brown fox jumps over the lazy dog." \
-              -n 128 \
-              -c 8192 \
-              -b 512 \
-              -ub 128 \
-              -t 8 \
-              --sequences 8 \
-              --junk 4 \
-              -pps \
-              --verbose-prompt
+      # - name: Run llama-parallel
+      #   working-directory: llama.cpp
+      #   run: |
+      #     ./build/bin/llama-parallel \
+      #       --model models/Qwen2.5-0.5B-Instruct/ggml-model-f16.gguf \
+      #         -p "The quick brown fox jumps over the lazy dog." \
+      #         -n 128 \
+      #         -c 8192 \
+      #         -b 512 \
+      #         -ub 128 \
+      #         -t 8 \
+      #         --sequences 8 \
+      #         --junk 4 \
+      #         -pps \
+      #         --verbose-prompt
 
-      - name: Run llama-mtmd-cli
-        working-directory: llama.cpp
-        env:
-          GGML_CANN_DISABLE: "1"
-        run: |
-          ./build/bin/llama-mtmd-cli \
-            --model models/Qwen2.5-VL-3B-Instruct/ggml-model-f16.gguf \
-            --mmproj models/Qwen2.5-VL-3B-Instruct/mmproj.gguf \
-            --image media/llama0-banner.png \
-            -p "Describe the image in detail." \
-            -t 4 \
-            -n 128 \
-            --chat-template vicuna
+      # - name: Run llama-mtmd-cli
+      #   working-directory: llama.cpp
+      #   env:
+      #     GGML_CANN_DISABLE: "1"
+      #   run: |
+      #     ./build/bin/llama-mtmd-cli \
+      #       --model models/Qwen2.5-VL-3B-Instruct/ggml-model-f16.gguf \
+      #       --mmproj models/Qwen2.5-VL-3B-Instruct/mmproj.gguf \
+      #       --image media/llama0-banner.png \
+      #       -p "Describe the image in detail." \
+      #       -t 4 \
+      #       -n 128 \
+      #       --chat-template vicuna
 
   create-pr:
       if: ${{ needs.test.outputs.check-changed == 'true' }}
