--- a/.github/workflows/llamacpp_test.yml
+++ b/.github/workflows/llamacpp_test.yml
@@ -338,11 +338,11 @@ jobs:
         - name: Create a pull request to update benchmark result
           uses: peter-evans/create-pull-request@v7
           with:
-            token: ${{ secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.COSDT_BOT_TOKEN }}
             base: main
             branch: llamacpp-report/${{ github.run_id }}
             commit-message: "Update llamacpp backend ops support report"
-            add-paths: docs/llamacpp_ops.md
+            add-paths: llamacpp_ops.md
             title: "[Ascend NPU] Update llamacpp backend ops support report"
             body: |
               This PR updates the llama.cpp backend operator support report based on the latest test results.
