--- a/.github/workflows/llamacpp_test.yml
+++ b/.github/workflows/llamacpp_test.yml
@@ -333,6 +333,10 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: llamacpp_ops.md
+
+        - name: Move artifact into docs
+          run: |
+            mv llamacpp_ops.md docs/llamacpp_ops.md
   
         # See: https://github.com/peter-evans/create-pull-request
         - name: Create a pull request to update benchmark result
@@ -342,7 +346,7 @@ jobs:
             base: main
             branch: llamacpp-report/${{ github.run_id }}
             commit-message: "Update llamacpp backend ops support report"
-            add-paths: llamacpp_ops.md
+            add-paths: docs/llamacpp_ops.md
             title: "[Ascend NPU] Update llamacpp backend ops support report"
             body: |
               This PR updates the llama.cpp backend operator support report based on the latest test results.
