--- a/.github/workflows/llamacpp_test.yml
+++ b/.github/workflows/llamacpp_test.yml
@@ -187,11 +187,10 @@ jobs:
       #     bash
 
       # - name: Summarize backend operator support
-      #   working-directory: llama.cpp
       #   run: |
-      #     python ../script/classify_backend_ops.py \
+      #     python script/classify_backend_ops.py \
       #       --log-dir "${{ steps.backend-ops.outputs.log-dir }}" \
-      #       --summary-file ../docs/llamacpp_ops.md
+      #       --summary-file docs/llamacpp_ops.md
 
       - name: check if ops changed
         id: check-changed
@@ -333,7 +332,7 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: llamacpp_ops.md
-            path: docs/llamacpp_ops.md
+            path: docs
   
         # See: https://github.com/peter-evans/create-pull-request
         - name: Create a pull request to update benchmark result
