--- a/.github/workflows/torchtitan.yml
+++ b/.github/workflows/torchtitan.yml
@@ -98,38 +98,54 @@ jobs:
           echo "NPU count: ${npu_count}"
           pip list | grep -E 'torch|numpy'
 
-      - name: Create sitecustomize stub for torch.nn.attention.varlen
+      - name: Patch torch.compile + stub torch.nn.attention.varlen (CI workaround)
         working-directory: torchtitan
         run: |
           cat > sitecustomize.py << 'EOF'
-          import sys
-          import types
-
+          import sys, types, re
+      
+          # --- 1) Stub torch.nn.attention.varlen so torchtitan import doesn't crash ---
           try:
               import torch.nn.attention as _attn_mod
           except Exception:
               _attn_mod = None
-
+      
           mod_name = "torch.nn.attention.varlen"
-
-          # 如果 PyTorch 真的已经提供了，就什么也不做
           if mod_name not in sys.modules:
               m = types.ModuleType(mod_name)
-
               def varlen_attn(*args, **kwargs):
-                  # 这里是占位实现：如果真的被调用，直接报错提醒
                   raise RuntimeError(
                       "torch.nn.attention.varlen is not available in this build; "
-                      "this is a stub for torchtitan tests on non-nightly / NPU builds."
+                      "stub injected for CI."
                   )
-
               m.varlen_attn = varlen_attn
               sys.modules[mod_name] = m
-
-              # 如果有 torch.nn.attention 模块，就把 varlen 也挂上去
               if _attn_mod is not None:
                   setattr(_attn_mod, "varlen", m)
-          EOF
+      
+          # --- 2) Make torch.compile tolerant to unsupported inductor options ---
+          try:
+              import torch
+              _orig_compile = torch.compile
+      
+              def _safe_compile(*args, **kwargs):
+                  try:
+                      return _orig_compile(*args, **kwargs)
+                  except RuntimeError as e:
+                      msg = str(e)
+                      # Handle: Unexpected optimization option <foo>, known options are [...]
+                      if "Unexpected optimization option" in msg:
+                          # Option A: drop all options and retry
+                          kwargs2 = dict(kwargs)
+                          kwargs2.pop("options", None)
+                          return _orig_compile(*args, **kwargs2)
+                      raise
+      
+              torch.compile = _safe_compile
+          except Exception:
+              # If torch itself can't import, do nothing
+              pass
+          EOF        
 
       - name: Run torchtitan integration_test
         working-directory: torchtitan
