--- a/.github/workflows/triton_ascend.yml
+++ b/.github/workflows/triton_ascend.yml
@@ -52,7 +52,7 @@ jobs:
 
           - name: Install triton dependencies
             run: |
-              pip install attrs==24.2.0 numpy==1.26.4 scipy==1.13.1 decorator==5.1.1 psutil==6.0.0 pytest==8.3.2 pytest-xdist==3.6.1 pyyaml
+              pip install attrs==24.2.0 numpy==1.26.4 scipy==1.13.1 decorator==5.1.1 psutil==6.0.0 pytest==8.3.2 pytest-xdist==3.6.1 pyyaml pybind11
         
           - name: Install torch_npu
             run: |
